# company-mfa-core

./: .env.example  README.md  pyproject.toml  setup.py
django_mfa_core/: __init__.py  apps.py  constants.py  exceptions.py  receivers.py  settings.py  signals.py
django_mfa_core/api/: __init__.py  serializers.py  urls.py  views.py
django_mfa_core/middleware/: mfa_middleware.py
django_mfa_core/migrations/: 0001_initial.py  0002_mfadevice_totp_app_id.py  __init__.py
django_mfa_core/models/: __init__.py  audit_log.py  backup_code.py  mfa_device.py  mfa_session.py
django_mfa_core/providers/: __init__.py  base.py  email_provider.py  sms_provider.py  totp_provider.py
django_mfa_core/services/: __init__.py  mfa_service.py  otp_service.py  totp_service.py
django_mfa_core/tasks/: __init__.py  otp_tasks.py
django_mfa_core/utils/: __init__.py  encryption.py  helpers.py  rate_limit.py  totp_app_config.py
tests/: __init__.py  settings.py  test_mfa_flows.py  urls.py
